--- a/My2048/test.html
+++ b/My2048/test.html
@@ -3,92 +3,8 @@
 <meta charset="utf-8">
 <head>
 	<title>测试</title>
-	<style type="text/css">
-		.main-container{
-			position: relative;
-			background-color: #BBADA0;
-			border-radius: 10px;
-			width: 550px;
-			height: 550px;
-		}
-		.cell-container{
-			color: #776E65;
-			font-family: "sans-serif";
-			font-size: 50px;
-			text-align: center;
-			vertical-align: middle;
-			background-color: #CCC0B3;
-			width: 100px;
-			height: 100px;
-			display: block;
-			line-height:100px;
-			border-radius: 8px;
-		}
-		#cell-0-0{
-			position: absolute;
-			top: 30px; left: 30px;
-		}
-		#cell-0-1{
-			position: absolute;
-			top: 30px; left: 160px;
-		}
-		#cell-0-2{
-			position: absolute;
-			top: 30px; right: 160px;
-		}
-		#cell-0-3{
-			position: absolute;
-			top: 30px; right: 30px;
-		}
-		#cell-1-0{
-			position: absolute;
-			top: 160px; left: 30px;
-		}
-		#cell-1-1{
-			position: absolute;
-			top: 160px; left: 160px;
-		}
-		#cell-1-2{
-			position: absolute;
-			top: 160px; right: 160px;
-		}
-		#cell-1-3{
-			position: absolute;
-			top: 160px; right: 30px;
-		}
-		#cell-2-0{
-			position: absolute;
-			bottom: 160px; left: 30px;
-		}
-		#cell-2-1{
-			position: absolute;
-			bottom: 160px; left: 160px;
-		}
-		#cell-2-2{
-			position: absolute;
-			bottom: 160px; right: 160px;
-		}
-		#cell-2-3{
-			position: absolute;
-			bottom: 160px; right: 30px;
-		}
-		#cell-3-0{
-			position: absolute;
-			bottom: 30px; left: 30px;
-		}
-		#cell-3-1{
-			position: absolute;
-			bottom: 30px; left: 160px;
-		}
-		#cell-3-2{
-			position: absolute;
-			bottom: 30px; right: 160px;
-		}
-		#cell-3-3{
-			position: absolute;
-			bottom: 30px; right: 30px;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<script type="text/javascript"></script>
 </head>
 <body>
 	<div class="main-container">
