--- a/My2048/test.html
+++ b/My2048/test.html
@@ -4,26 +4,26 @@
 <head>
 	<title>测试</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script type="text/javascript"></script>
+	<script type="text/javascript" src="2048.js"></script>
 </head>
 <body>
 	<div class="main-container">
-		<div class="cell-container" id="cell-0-0">1</div>
-		<div class="cell-container" id="cell-0-1">2</div>
-		<div class="cell-container" id="cell-0-2">3</div>
-		<div class="cell-container" id="cell-0-3">4</div>
-		<div class="cell-container" id="cell-1-0">5</div>
-		<div class="cell-container" id="cell-1-1">6</div>
-		<div class="cell-container" id="cell-1-2">7</div>
-		<div class="cell-container" id="cell-1-3">8</div>
-		<div class="cell-container" id="cell-2-0">9</div>
-		<div class="cell-container" id="cell-2-1">10</div>
-		<div class="cell-container" id="cell-2-2">11</div>
-		<div class="cell-container" id="cell-2-3">12</div>
-		<div class="cell-container" id="cell-3-0">13</div>
-		<div class="cell-container" id="cell-3-1">14</div>
-		<div class="cell-container" id="cell-3-2">15</div>
-		<div class="cell-container" id="cell-3-3">16</div>
+		<div class="cell-container" id="cell-0-0"></div>
+		<div class="cell-container" id="cell-0-1"></div>
+		<div class="cell-container" id="cell-0-2"></div>
+		<div class="cell-container" id="cell-0-3"></div>
+		<div class="cell-container" id="cell-1-0"></div>
+		<div class="cell-container" id="cell-1-1"></div>
+		<div class="cell-container" id="cell-1-2"></div>
+		<div class="cell-container" id="cell-1-3"></div>
+		<div class="cell-container" id="cell-2-0"></div>
+		<div class="cell-container" id="cell-2-1"></div>
+		<div class="cell-container" id="cell-2-2"></div>
+		<div class="cell-container" id="cell-2-3"></div>
+		<div class="cell-container" id="cell-3-0"></div>
+		<div class="cell-container" id="cell-3-1"></div>
+		<div class="cell-container" id="cell-3-2"></div>
+		<div class="cell-container" id="cell-3-3"></div>
 	</div>
 </body>
 </html>
