--- a/My2048/test.html
+++ b/My2048/test.html
@@ -4,7 +4,9 @@
 <head>
 	<title>测试</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script type="text/javascript" src="2048.js"></script>
+	<script type="text/javascript" src="utils.js"></script>
 </head>
 <body>
 	<div class="main-container">
