--- a/My2048/test.html
+++ b/My2048/test.html
@@ -10,21 +10,37 @@
 </head>
 <body>
 	<div class="main-container">
+		<div class="cell-container" id="cell-0-0-background" z-index:-999></div>
 		<div class="cell-container" id="cell-0-0"></div>
+		<div class="cell-container" id="cell-0-1-background" z-index:-999></div>
 		<div class="cell-container" id="cell-0-1"></div>
+		<div class="cell-container" id="cell-0-2-background" z-index:-999></div>
 		<div class="cell-container" id="cell-0-2"></div>
+		<div class="cell-container" id="cell-0-3-background" z-index:-999></div>
 		<div class="cell-container" id="cell-0-3"></div>
+		<div class="cell-container" id="cell-1-0-background" z-index:-999></div>
 		<div class="cell-container" id="cell-1-0"></div>
+		<div class="cell-container" id="cell-1-1-background" z-index:-999></div>
 		<div class="cell-container" id="cell-1-1"></div>
+		<div class="cell-container" id="cell-1-2-background" z-index:-999></div>
 		<div class="cell-container" id="cell-1-2"></div>
+		<div class="cell-container" id="cell-1-3-background" z-index:-999></div>
 		<div class="cell-container" id="cell-1-3"></div>
+		<div class="cell-container" id="cell-2-0-background" z-index:-999></div>
 		<div class="cell-container" id="cell-2-0"></div>
+		<div class="cell-container" id="cell-2-1-background" z-index:-999></div>
 		<div class="cell-container" id="cell-2-1"></div>
+		<div class="cell-container" id="cell-2-2-background" z-index:-999></div>
 		<div class="cell-container" id="cell-2-2"></div>
+		<div class="cell-container" id="cell-2-3-background" z-index:-999></div>
 		<div class="cell-container" id="cell-2-3"></div>
+		<div class="cell-container" id="cell-3-0-background" z-index:-999></div>
 		<div class="cell-container" id="cell-3-0"></div>
+		<div class="cell-container" id="cell-3-1-background" z-index:-999></div>
 		<div class="cell-container" id="cell-3-1"></div>
+		<div class="cell-container" id="cell-3-2-background" z-index:-999></div>
 		<div class="cell-container" id="cell-3-2"></div>
+		<div class="cell-container" id="cell-3-3-background" z-index:-999></div>
 		<div class="cell-container" id="cell-3-3"></div>
 	</div>
 </body>
